Alignment Fix

--- a/navbar.css
+++ b/navbar.css
@@ -24,6 +24,7 @@
     opacity: 0.9;
     position: fixed;
     z-index: 999;
+    box-shadow: 0vw 1vw 1vw rgba(0,0,0,0.5);
 }
 .website-name{
     margin-top: 0;
@@ -36,6 +37,11 @@
 .website-name:hover{
     cursor: pointer;
     transform: translateY(-0.25vw);
+}
+.links ul{
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 .links li{
     list-style: none;
